Fixed where overflow-x goes

--- a/board/static/css/base.scss
+++ b/board/static/css/base.scss
@@ -46,7 +46,7 @@ input[type=password] { ime-mode: disabled; }
 #overlay div { z-index:2500; }
 
 #wrapper { width:780px; background:#fff; box-shadow:0 0 10px rgba(0,0,0,.1); margin:0 auto; margin-top:50px;
-	@media screen and (max-width: $large) { width:100%; }
+	@media screen and (max-width: $large) { width:100%; overflow-x:hidden; }
 }
 
 #footer {
